# wasm-debug-suite

./: .gitignore  AGENTS.md  Cargo_toml Fehleranalyse.html
Cargo_toml Fehleranalyse_files/: a.html
Cargo_toml Fehleranalyse_files/a_data/: main.js
didspace/: Cargo.toml  bindings.rs  component1.txt  err.txt  err2.txt  hello.c  hello.wasm  hello.wat  hello.wit  hello_analysis.txt  hello_component.txt  hello_cpp.wat.txt  hello_profiling.txt  main_animals.wasm  main_animals.wat  mem_segm.wat  output.txt  to_txt.cpp  to_txt_noexc.cpp  wasi.txt
didspace/src/: analysis.rs  bindgen.rs  cli.rs  converter.rs  doctor.rs  doctor.txt  hex_dump.rs  main.rs  repl.rs  toolchain.rs  utils.rs  wasi.rs
memlayout/: Cargo.toml  Cargo.txt  CargoNov.toml  CargoOLD.toml  CargoOLD2.toml  CargoOLD3.toml  app.wasm  app.wat  bashrc.txt  build.rs  build.txt  buildOLD.rs  check_linker_flags.sh  err.txt  err2.txt  err3.txt  error2.txt  full.txt  full2.txt  linker.txt  ls_llvm.txt  lsout.txt  meml_dbg.txt  out2.txt  output.txt  output2.txt  polly_grep.txt  polly_nm.txt  pollygr.txt  probestack_shim.c  setup_llvm.sh  wasmrt.txt  zshrc.txt
memlayout/src/: app.wasm  debugger.rs  disasm.rs  disasmOLD.rs  dwarfparser.rs  errors.rs  integration.rs  main.rs  memlayout.rs  memsegments.rs  memviz.rs  output_cargo.txt  polly.txt  pollygr.txt  pollyislgr.txt  probestack_shim.c  types.rs  wasmrt.rs
memlayout/wasmtest/: Cargo.toml
memlayout/wasmtest/src/: lib.rs
tools/: wasm_dbg.txt
tools/dwarf_dump/: CMakeLists.txt  dwarf_dump.cpp  dwarf_dumpOLD.cpp  output.txt
tools/wasm_debugger/: CMakeLists.txt  wasm_debugger.cpp  wasm_debugger.hpp  wasm_debugger.txt
tools/wat_tools/: CMakeLists.txt  wasm_memory_demo.wasm  wat_tools.cpp
