[package]
name = "didspace"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
wat = "1.0"
anyhow = "1.0"
wasm-tools = "1.243.0"
wabt = "0.10.0"
wasmprinter = "0.2"
wasmparser = "0.243.0"
rustyline = "17.0.2"
colored = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
