
[package]
name = "memlayout"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "12"

# Wasmer with LLVM backend
wasmer = { version = "4", features = ["llvm"] }
gimli = "0.32.3"
wasmer-compiler = "6.1.0"
byteorder = "1.5.0"

# Direct LLVM bindings for Wasmer compiler backend
#llvm-sys = { version = "180.0.0", features = ["prefer-static"] }

